--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="StyleToolbar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
+    <style name="StyleToolbar" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="android:background">@android:color/white</item>
+    </style>
 </resources>
